# PulseMetrics-AI-powered-log-monitoring-service

./: .env.example  .gitignore  PulseMetrics-PRD.md  README.md  alembic.ini  celerybeat-schedule  pyproject.toml  render.yaml  start.sh
.github/workflows/: ci.yml
agent/: pyproject.toml
agent/pulsemetrics_agent/: batcher.py  buffer.py  cli.py  shipper.py  tailer.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: main.py
app/api/: deps.py
app/api/v1/: alerts.py  analytics.py  applications.py  auth.py  channels.py  clusters.py  dashboard.py  ingestion.py  rules.py  search.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: session.py
app/db/models/: __init__.py  alert.py  application.py  cluster.py  log.py  organization.py  rule.py  user.py
app/notifiers/: base.py  console.py  email.py  factory.py  slack.py  webhook.py
app/parsers/: base.py  factory.py  json_parser.py  plaintext_parser.py  regex_parser.py  syslog_parser.py
app/repositories/: alert_repo.py  application_repo.py  base.py  cluster_repo.py  log_repo.py  rule_repo.py  user_repo.py
app/rules/: anomaly.py  base.py  factory.py  novelty.py  rate_of_change.py  regex.py  threshold.py
app/schemas/: alert.py  application.py  auth.py  channel.py  cluster.py  log.py  rule.py
app/services/: analytics.py  clustering.py  embeddings.py  ingestion.py  rule_evaluator.py
app/tasks/: celery_app.py  ingestion_tasks.py  maintenance_tasks.py  notification_tasks.py  rule_tasks.py
app/templates/: base.html  clusters.html  overview.html  rules.html  search.html  settings.html
docker/: Dockerfile  Dockerfile.agent  docker-compose.yml
scripts/: enable_pgvector.py  load_test.py  partition_check.py  seed_data.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_clustering.py  test_parsers.py  test_rules.py  test_security.py
