[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulsemetrics"
version = "1.0.0"
description = "Self-hosted log monitoring and alerting service with AI-powered clustering"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.2",
    # Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Async task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.4",
    # AI / embeddings
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    # HTTP client
    "httpx>=0.27.0",
    # Charts
    "matplotlib>=3.9.0",
    # Logging
    "structlog>=24.1.0",
    # Email
    "aiosmtplib>=3.0.1",
    # Utilities
    "python-multipart>=0.0.9",
    "python-dateutil>=2.9.0",
    "citext>=0.7.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "testcontainers[postgres,redis]>=4.7.0",
    "httpx>=0.27.0",
    "mypy>=1.10.0",
    "ruff>=0.4.4",
    "types-passlib>=1.7.7.20240327",
    "types-python-jose>=3.3.4.20240106",
    "types-python-dateutil>=2.9.0.20240316",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["B008", "E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["app"]
