[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulsemetrics-agent"
version = "1.0.0"
description = "Log shipping agent for PulseMetrics"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0",
]

[project.scripts]
pulsemetrics-agent = "pulsemetrics_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pulsemetrics_agent"]
